--- a/nginx.conf
+++ b/nginx.conf
@@ -23,12 +23,25 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80 default_server;
+        listen 8080 default_server;
         server_name _;
 
         location / {
+            if ($request_method = "OPTIONS" ) {
+                add_header "Access-Control-Allow-Origin" "*";
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
+                add_header "Access-Control-Allow-Headers" "Authorization,Origin,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Accept";
+                add_header "Access-Control-Max-Age" 1728000;
+                add_header "Content-Type" "text/plain; charset=utf-8";
+                add_header "Content-Length" 0;
+                return 204;
+            }
+            if ($request_method ~* "(GET|POST)") {
+                add_header "Access-Control-Allow-Origin" "*";
+            }
             root /http;
             autoindex on;
+            autoindex_exact_size off;
         }
     }
 }
